force-app/zurich-base/main/default/objects/DeleteRecordsEvent__e/DeleteRecordsEvent__e.object-meta.xml
<CustomObject>
    <description>Evento lanzado para avisar de un borrado en masa de un objeto concreto y con unas condiciones concretas. está pensado para lanzarlo periódicamente desde un flow</description>
    <label>Delete Records Event</label>
    <pluralLabel>Delete Records Events</pluralLabel>
</CustomObject>