force-app/zurich-base/main/default/objects/DeleteRecordsEvent__e/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>son las condiciones que se pondrán en la query en el WHERE y antes del limit . Si estuviera vacío no se aplica “where” y se elimina todos los registros del objeto indicado</description>
    <label>Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>