force-app/zurich-base/main/default/objects/DeleteRecordsEvent__e/fields/LaunchedCount__c.field-meta.xml
<CustomField>
    <fullName>LaunchedCount__c</fullName>
    <defaultValue>1</defaultValue>
    <description>número de veces que se ha lanzado el evento para evitar bucles</description>
    <label>Launched Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>