force-app/zurich-base/main/default/objects/DeleteRecordsEvent__e/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Objeto del cual se quieren borrar sus registros, ej: &apos;Survey__c&apos;</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>